--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+
+# Tkinter themes
+/awthemes-10.4.0
+/forest-dark
+/forest-light
+/theme
+/tksvg0.12
+forest-dark.tcl
+forest-light.tcl
+sun-valley.tcl
